--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="hotel caorle, hotel 4 stelle caorle, hotel fronte mare, vacanze caorle, hotel con piscina, hotel per famiglie, hotel con ristorante, Hilton Hotel">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="author" content="Hilton Hotel Caorle">
-    <link rel="canonical" href="https://fantinellohotel.com">
+    <link rel="canonical" href="https://aminacanoska.github.io/HiltonHotel/">
     <!--FAVICON-->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -19,16 +19,16 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Hilton Hotel Caorle | Hotel 4 Stelle sul Mare">
-    <meta property="og:description" content="Hilton Hotel Caorle: hotel 4 stelle fronte mare con piscina, ristorante, camere moderne e servizi esclusivi. Prenota la tua vacanza ideale a Caorle.">
-    <meta property="og:url" content="https://fantinellohotel.com">
-    <meta property="og:image" content="https://fantinellohotel.com/images/img.jpg">
+    <meta property="og:title" content="Hilton Hotel Caorle | Hotel 5 Stelle sul Mare">
+    <meta property="og:description" content="Hilton Hotel Caorle: hotel 5 stelle fronte mare con piscina, ristorante, camere moderne e servizi esclusivi. Prenota la tua vacanza ideale a Caorle.">
+    <meta property="og:url" content="https://aminacanoska.github.io/HiltonHotel/">
+    <meta property="og:image" content="https://aminacanoska.github.io/HiltonHotel/img/img-og.jpg">
     <meta property="og:site_name" content="Hilton Hotel Caorle">
     <meta property="og:locale" content="it_IT">
 
     <!-- Social Profiles -->
-    <meta property="og:see_also" content="https://it-it.facebook.com/fantinellohotel.it/">
-    <meta property="og:see_also" content="https://www.instagram.com/hotelfantinello.caorle/">
+    <meta property="og:see_also" content="https://it-it.facebook.com/hiltonhotel.it/">
+    <meta property="og:see_also" content="https://www.instagram.com/hotelhilton.caorle/">
     <meta property="og:see_also" content="https://www.youtube.com/channel/UCtX11dCQVhVmwEM6-pOKLRA?app=desktop">
     <!-- Indicizzazione e snippet -->
 
@@ -41,9 +41,9 @@
       "@context": "https://schema.org",
       "@type": "Hotel",
       "name": "Hilton Hotel Caorle",
-      "image": "https://www.fantinellohotel.com/images/img.jpg",
+      "image": "https://aminacanoska.github.io/HiltonHotel//img/img-og.jpg",
       "url": "https://fantinellohotel.com",
-      "telephone": "+39 0421 81570",
+      "telephone": "+39 0421 84545",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Via Pola, 1 (Spiaggia di Levante)",
@@ -51,7 +51,7 @@
         "postalCode": "30021",
         "addressCountry": "IT"
       },
-      "description": "Hilton Hotel Caorle: hotel 4 stelle fronte mare con piscina, ristorante, camere moderne e servizi esclusivi.",
+      "description": "Hilton Hotel Caorle: hotel 5 stelle fronte mare con piscina, ristorante, camere moderne e servizi esclusivi.",
       "priceRange": "€€€",
       "starRating": {
         "@type": "Rating",
@@ -59,8 +59,8 @@
         "bestRating": "5"
       },
       "sameAs": [
-        "https://it-it.facebook.com/fantinellohotel.it/",
-        "https://www.instagram.com/hotelfantinello.caorle/",
+        "https://it-it.facebook.com/hiltonotel.it/",
+        "https://www.instagram.com/hotelhilton.caorle/",
         "https://www.youtube.com/channel/UCtX11dCQVhVmwEM6-pOKLRA?app=desktop"
       ]
     }
